--- a/Html&Css/service.html
+++ b/Html&Css/service.html
@@ -127,7 +127,7 @@
             </a>
         </div>
     </footer>
-    <script src="../js/service.js">
+    <script src="../JS/service.js">
     </script>
     
 </body>
