--- a/Html&Css/login.html
+++ b/Html&Css/login.html
@@ -73,7 +73,7 @@
         </div>
     </footer>
 
-    <script src="../Js/myjs.js">
+    <script src="../JS/myjs.js">
     </script>
 </body>
 </html>
